Fixed width overflowing into X axis from form containers. Removed About & Contact in navbar till for now

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -37,7 +37,7 @@
     flex-direction: column;
   }
   #flex-container-div {
-    width: 100vw;
+    width: auto;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
